# Crew-para-Diagramas-UML

./: .gitignore  README.md  pyproject.toml  requirements.txt  system.txt
src/diagramas_uml/: main.py
src/diagramas_uml/config/: llm_config.py
src/diagramas_uml/crews/crew_analisis/: README.md  pyproject.toml
src/diagramas_uml/crews/crew_analisis/src/crew_analisis/: crew.py  main.py
src/diagramas_uml/crews/crew_analisis/src/crew_analisis/config/: agents.yaml  tasks.yaml
src/diagramas_uml/crews/crew_analisis/src/crew_analisis/skills/uml-estructuracion/: SKILL.md
src/diagramas_uml/crews/crew_desarrollo/: README.md  pyproject.toml
src/diagramas_uml/crews/crew_desarrollo/src/crew_desarrollo/: crew.py  main.py
src/diagramas_uml/crews/crew_desarrollo/src/crew_desarrollo/config/: agents.yaml  tasks.yaml
src/diagramas_uml/crews/crew_desarrollo/src/crew_desarrollo/skills/google-drive-despliegue/: SKILL.md
src/diagramas_uml/crews/crew_desarrollo/src/crew_desarrollo/skills/uml-generacion/: SKILL.md
src/diagramas_uml/crews/crew_desarrollo/src/crew_desarrollo/tools/: custom_tool.py
