[project]
name = "diagramas_uml"
version = "0.1.0"
description = "Diagramas_UML using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.4"
]

[project.scripts]
kickoff = "diagramas_uml.main:kickoff"
run_crew = "diagramas_uml.main:kickoff"
plot = "diagramas_uml.main:plot"
run_with_trigger = "diagramas_uml.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
