[project]
name = "crew_analisis"
version = "0.1.0"
description = "crew_Analisis using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.4"
]

[project.scripts]
crew_analisis = "crew_analisis.main:run"
run_crew = "crew_analisis.main:run"
train = "crew_analisis.main:train"
replay = "crew_analisis.main:replay"
test = "crew_analisis.main:test"
run_with_trigger = "crew_analisis.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
