[project]
name = "crew_desarrollo"
version = "0.1.0"
description = "crew_Desarrollo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.4"
]

[project.scripts]
crew_desarrollo = "crew_desarrollo.main:run"
run_crew = "crew_desarrollo.main:run"
train = "crew_desarrollo.main:train"
replay = "crew_desarrollo.main:replay"
test = "crew_desarrollo.main:test"
run_with_trigger = "crew_desarrollo.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
